<resources>
    <string name="app_name">Habit Game</string>
    <string name="email">Email</string>
    <string name="username">Korisnicko ime</string>
    <string name="password">Lozinka</string>
    <string name="confirm_password">Potvrdi lozinku</string>
    <string name="choose_avatar">Izaberite avatara</string>
    <string name="register">Registruj se</string>
    <string name="login">Prijavi se</string>

    <string name="email_hint">Unesite Email</string>
    <string name="username_hint">Unesite korisnicko ime</string>
    <string name="password_hint">Unesite lozinku</string>
    <string name="confirm_password_hint">Potvrdite lozinku</string>
    <string name="badges">Bedzevi</string>
    <string name="pp">PP</string>
    <string name="xp">XP</string>
    <string name="equipment">Oprema</string>
    <string name="chage_password">Promjeni lozinku</string>
    <string name="old_password">Stara lozinka</string>
    <string name="new_password">Nova lozinka</string>
    <string name="confirm_new_password">Potvrdite novu lozinku</string>
    <string name="profile">Profil</string>
    <string name="logout">Odjavi se</string>
    <string name="navigation_drawer_open" translatable="false">Navigation Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Drawer Close</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="shop">Prodavnica</string>
    <string name="buy">Kupi</string>
    <string name="show_profile">Prikazi profil</string>
    <string name="friend">Prijatelj</string>
    <string name="friends">Prjatelji</string>
    <string name="search_profile_hint">Unesite korisnicko ime za pretragu</string>
    <string name="search">Pretrazi</string>
    <string name="alliance_name_hint">Naziv saveza</string>
    <string name="add_alliance">Dodaj savez</string>
    <string name="leader">Vodja saveza</string>
    <string name="members">Clanovi saveza</string>
    <string name="alliance">Savez</string>
    <string name="leave">Napusti</string>
    <string name="delete">Obrisi</string>
    <string name="add_to_alliance">Dodaj u savez</string>
    <string name="invite_to_alliance">Pozovi u savez</string>
    <string name="messages">Poruke</string>
    <string name="progress">Napredak</string>
    <string name="message_hint">Poruka...</string>
    <string name="category_creation">Kreiraj kategoriju</string>

    <string name="tasks">Zadaci</string>
    <string name="create_task">Kreiraj Zadatak</string>
    <string name="task_name_hint">Naziv Zadatak</string>
    <string name="task_description_hint">Opis Zadatak (Opciono)</string>

    <string-array name="xp_weights">
        <item>Veoma lak</item>
        <item>Lak</item>
        <item>Tezak</item>
        <item>Ekstremno tezak</item>
    </string-array>

    <string-array name="xp_importance">
        <item>Normalan</item>
        <item>Vazan</item>
        <item>Ekstremno vazan</item>
        <item>Specijalan</item>
    </string-array>

    <string-array name="repeat_units">
        <item>dan</item>
        <item>nedelja</item>
    </string-array>

    <string-array name="repeat_intervals">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="active">Aktiviraj</string>

    <string name="categories">Kategorije</string>
    <string name="no_categories">Nema kategorija. Dodaj novu preko +</string>
    <string name="edit">Izmeni</string>
    <string name="add_category">Dodaj kategoriju</string>

    <string name="category_name">Naziv kategorije</string>
    <string name="change_color">Promeni boju</string>
    <string name="save">Sacuvaj</string>
    <string name="required">Obavezno polje</string>

    <string name="delete_category_title">Obrisi kategoriju?</string>
    <string name="delete_category_message">Ova akcija se ne moze ponistiti.</string>
    <string name="one_time_tasks">Jednokratni</string>
    <string name="repeating_tasks">Ponavljajući</string>
    <string name="no_tasks">Nema zadataka.</string>
    <string name="mark_done">Označi kao urađeno</string>
    <string name="mark_canceled">Označi kao otkazano</string>
    <string name="mark_paused">Pauziraj</string>
    <string name="mark_active">Aktiviraj</string>
    <string name="repeating">Ponavljajući</string>
    <string name="one_time">Jednokratni</string>
    <string name="weight_s">Težina: %1$s</string>
    <string name="importance_s">Važnost: %1$s</string>
    <string name="xp_s">XP: %1$d</string>
    <string name="calendar">Kalendar</string>
    <string name="status_s">Status: %1$s</string>
    <string name="task_date_xp">%1$s • %2$d XP</string>
    <string name="task_name">Naziv zadatka</string>
    <string name="task_description">Opis zadatka</string>
    <string name="date">Datum</string>
    <string name="time">Vreme</string>
    <string name="pick">Izaberi</string>
    <string name="cancel">Otkaži</string>
    <string name="pick_date">Izaberi datum</string>
    <string name="pick_time">Izaberi vreme</string>
    <string name="err_name_required">Naziv je obavezan.</string>
    <string name="err_cannot_edit_finished">Zadatak je završen/otkazan i ne može se menjati.</string>
    <string name="err_cannot_edit_past">Ne možeš menjati zadatak čije je izvođenje u prošlosti.</string>
    <string name="task_updated">Zadatak izmenjen.</string>
    <string name="weight">Težina</string>
    <string name="importance">Bitnost</string>
    <string name="err_cannot_delete_finished">Nije moguće obrisati završen zadatak.</string>
    <string name="show_details">Detalji</string>
    <string name="status_active">Aktivan</string>
    <string name="status_paused">Pauziran</string>
    <string name="status_canceled">Otkazan</string>
    <string name="status_done">Urađen</string>
    <string name="status_created">Kreiran</string>
    <string name="err_action_only_active">Akcija je dostupna samo za aktivne zadatke.</string>
    <string name="err_pause_only_repeating">Pauza je dostupna samo za ponavljajuće zadatke.</string>
    <string name="err_only_paused_to_active">Samo pauziran zadatak može da se aktivira.</string>
    <string name="status_missed">NEURADJEN</string>
    <string name="odaberi_datum_zavrsetka">Odaberi datum završetka (opciono)</string>
    <string name="not_implemented">Nije implementirano</string>
    <string name="boss">Boss</string>
    <string name="pp_s">PP: %1$d</string>
    <string name="attempts_s">Pokušaji: %1$d/5</string>
    <string name="success_s">Šansa: %1$d%%</string>
    <string name="rewards_hint">Moguće nagrade: novčići i oprema</string>


</resources>