<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/profileFragment"
            android:title="@string/profile"
            android:icon="@drawable/ic_person"
            android:orderInCategory="100" />

        <item android:id="@+id/changePasswordFragment"
            android:title="Promjeni lozinku"
            android:icon="@drawable/ic_key"
            android:orderInCategory="100" />
        <item
            android:id="@+id/tasksMonthFragment"
            android:icon="@android:drawable/ic_menu_month"
            android:title="@string/calendar" />
        <item
            android:id="@+id/taskCreationFragment"
            android:title="Kreiraj Zadatak"
            android:icon="@drawable/ic_add_task"
            android:orderInCategory="100" />
        <item
            android:id="@+id/tasksPagerFragment"
            android:icon="@drawable/ic_hamburger"
            android:title="@string/tasks" />
        <item
            android:id="@+id/categoryListFragment"
            android:title="Kategorije"
            android:icon="@drawable/ic_category_list"/>
        <item
            android:id="@+id/categoryCreationFragment"
            android:title="Kreiraj kategoriju"
            android:icon="@drawable/ic_add_category"
            android:orderInCategory="100"/>
        <item android:id="@+id/profileListFragment"
            android:title="@string/friends"
            android:icon="@drawable/ic_friends"
            android:orderInCategory="100" />
        <item android:id="@+id/allianceFragment"
            android:title="@string/alliance"
            android:icon="@drawable/ic_alliance"
            android:orderInCategory="100" />
        <item android:id="@+id/messagesFragment"
            android:title="@string/messages"
            android:icon="@drawable/ic_message"
            android:orderInCategory="100"/>
        <item android:id="@+id/progressFragment"
            android:title="@string/progress"
            android:icon="@drawable/ic_progress"
            android:orderInCategory="100"/>

        <item
            android:id="@+id/equipmentFragment"
            android:title="@string/equipment"
            android:icon="@drawable/shield"
            android:orderInCategory="100"/>

        <item android:id="@+id/shopFragment"
            android:title="@string/shop"
            android:icon="@drawable/ic_shopping_cart"
            android:orderInCategory="100" />

        <item android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"
            android:orderInCategory="200"/>

    </group>
</menu>