<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/profileFragment">

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.habitgame.fragments.ProfileFragment"
        android:label="@string/profile" />

    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="com.example.habitgame.fragments.ChangePasswordFragment"
        android:label="@string/chage_password" />

    <fragment
        android:id="@+id/profileListFragment"
        android:name="com.example.habitgame.fragments.ProfileListFragment"
        android:label="@string/friends"/>
    <fragment
        android:id="@+id/shopFragment"
        android:name="com.example.habitgame.fragments.ShopFragment"
        android:label="@string/shop"/>
    <fragment
        android:id="@+id/allianceFragment"
        android:name="com.example.habitgame.fragments.AllianceFragment"
        android:label="@string/alliance"/>
    <fragment
        android:id="@+id/addAllianceFragment"
        android:name="com.example.habitgame.fragments.AddAllianceFragment"
        android:label="Add Alliance"/>

    <fragment
        android:id="@+id/messagesFragment"
        android:name="com.example.habitgame.fragments.MessagesFragment"
        android:label="@string/messages"/>
</navigation>
