<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:fillViewport="true">-->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

    <Button
        android:id="@+id/leave_alliance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave"/>
    <Button
        android:id="@+id/delete_alliance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/alliance"/>

    <TextView
        android:id="@+id/alliance_name_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/alliance"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leader"
        android:layout_marginBottom="10dp"/>

    <ListView
        android:id="@+id/leader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/members"
        android:layout_marginBottom="10dp"/>

    <ListView
        android:id="@+id/members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
<!--    </ScrollView>-->
