<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_marginBottom="8dp"
    android:elevation="4dp">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/avatar1"
        android:layout_marginRight="20dp"
        android:background="@drawable/avatar_circle_backgroung" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/username"
            android:textColor="@color/black"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/is_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/friend"
            android:textColor="@color/gray"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/show_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_profile"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:padding="12dp" />
    </LinearLayout>
</LinearLayout>
